<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center_horizontal"
    android:orientation="vertical"
    tools:context="com.example.asusstrix.security.MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="0.3"
        android:gravity="center_horizontal"
        android:background="@color/colorGrey"
        android:orientation="vertical">
        <TextView
            android:id="@+id/user"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:textSize="30sp"
            android:textColor="@color/colorBlack"
            />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:textSize="15sp"
                android:textColor="@color/colorBlack"
                android:text="@string/balance_name"/>
            <TextView
                android:id="@+id/balance"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_weight="0.1"
        android:padding="10dp"
        android:gravity="center_horizontal"
        android:background="@color/colorDarkGrey"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <EditText
            android:id="@+id/transaction"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/et_bg"
            android:layout_marginStart="5dp"
            android:layout_marginEnd="5dp"
            android:padding="10dp"
            android:hint="@string/trans_amount"
            android:inputType="numberDecimal"/>
        <GridLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:columnCount="3"
            android:rowCount="1">
            <Button
                android:id="@+id/depositBtn"
                android:layout_width="wrap_content"
                android:layout_margin="5dp"
                android:background="@drawable/button"
                android:layout_height="wrap_content"
                android:textColor="@android:color/white"
                android:text="@string/deposit"/>
            <Button
                android:id="@+id/withdrawBtn"
                android:layout_width="wrap_content"
                android:background="@drawable/button"
                android:layout_margin="5dp"
                android:layout_height="wrap_content"
                android:textColor="@android:color/white"
                android:text="@string/withdraw"/>
            <Button
                android:id="@+id/transferBtn"
                android:layout_width="wrap_content"
                android:background="@drawable/button"
                android:layout_margin="5dp"
                android:layout_height="wrap_content"
                android:textColor="@android:color/white"
                android:text="@string/transfer"/>
        </GridLayout>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:padding="3sp"
            android:layout_width="match_parent"
            android:background="@color/colorBlack"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:textColor="@android:color/white"

            android:text="@string/transaction"/>
    </LinearLayout>
    <ScrollView
        android:layout_width="match_parent"
        android:layout_weight="5"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/history"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
    </ScrollView>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="0.1"
        android:gravity="center"
        android:layout_gravity="bottom"
        android:background="@color/colorGrey">
        <Button
            android:id="@+id/del"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/button"
            android:textColor="@android:color/white"
            android:text="@string/delete"/>
        <EditText
            android:id="@+id/et_pwd"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/et_bg"
            android:layout_marginStart="5dp"
            android:layout_marginEnd="5dp"
            android:padding="10dp"
            android:hint="@string/new_pwd"
            android:inputType="textPassword"/>
        <Button
            android:id="@+id/chng_pwd"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/button"
            android:textColor="@android:color/white"
            android:text="@string/change_pwd"/>
    </LinearLayout>


</LinearLayout>
